--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "15.0.0",
     "prettier": "^3.3.3",
     "react": "19.0.0-rc-65a56d0e-20241020",
-    "react-dom": "19.0.0-rc-65a56d0e-20241020"
+    "react-dom": "19.0.0-rc-65a56d0e-20241020",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
