--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "clsx": "^2.1.1",
+    "firebase": "^11.0.0",
     "next": "15.0.0",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
