--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@chainlink/contracts": "^1.3.0",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@reown/appkit": "^1.1.7",
+    "@reown/appkit-adapter-wagmi": "^1.1.7",
+    "@tanstack/react-query": "^5.59.16",
     "clsx": "^2.1.1",
     "firebase": "^11.0.0",
     "next": "15.0.0",
@@ -19,7 +22,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "viem": "^2.21.34",
+    "wagmi": "^2.12.25"
   },
   "devDependencies": {
     "@types/node": "^20",
